giving a default .env db uri for others

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,6 @@ POSTGRES_USER=monitoring_user
 POSTGRES_PASSWORD=goGoMonitor
 POSTGRES_PORT=5432
 POSTGRES_DB=monitoring 
+DATABASE_URI=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
 API_PORT=8000
 STRIIM_API_URL=
