--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ POSTGRES_PORT=5432
 POSTGRES_DB=monitoring 
 DATABASE_URI=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
 API_PORT=8000
+# STRIIM WRAPPER
 STRIIM_API_URL=
